# advanced-artificial-intelligence

./: README.md
lab1/: main.py  pyproject.toml
lab2/: classify_audios.ipynb  get_audio_feats.ipynb  localize_deglutitions.ipynb  main.py  model.py  pyproject.toml  requirements.txt
lab3/: step_1.ipynb
